# python-cartogram

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  pyproject.toml  setup.cfg
.github/workflows/: build-merged-pull-requests.yml  lint-test-upon-push.yml  release-and-deploy-v-tags.yml  release.yml  test.yml
docs/: conf.py  index.md  installation.md  quickstart.md  reference.md
docs/_helpers/: citation_style.py
docs/_static/: references.bib
docs/_static/data/: Austria_PopulationByNUTS2.geojson
docs/user-guide/: citation.md
docs/user-guide/installation/: installation.md
docs/user-guide/user-manual/: data-requirements.md  quickstart.md
src/cartogram/: :w  __init__.py  cartogram.py
tests/: conftest.py  test_cartogram.py
tests/data/: Austria_PopulationByNUTS2.gpkg
