[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=50.0.0", "wheel"]

[project]
name = "cartogram"
dynamic = [
    "authors",
    "classifiers",
    "description",
    "license",
    "readme",
    "requires-python",
    "urls",
    "version",
]

[project.optional-dependencies]
tests = ["pytest", "pytest-cov", "pytest-lazy-fixture"]

[tool.pytest.ini_options]
addopts = "-p no:faulthandler -r s --cov=./src/cartogram --cov-append --cov-report term-missing --cov-report xml"
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["tests/*"]
