[metadata]
name = cartogram

version = attr: r5py.__version__
license = GPLv3

description = Compute continous cartograms (a.k.a. anamorphic maps) from polygon geopandas.GeoDataFrames
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/austromorph/python-cartogram
project_urls =
    Documentation = https://python-cartogram.readthedocs.org/
    Change Log = https://github.com/austromorph/python-cartogram/blob/main/CHANGELOG.md
    Bug Tracker = https://github.com/austromorph/python-cartogram/issues

author = Christoph Fink
author_email = christoph.fink@helsinki.fi

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =src
python_requires = >= 3.9
install_requires =
    geopandas
    numpy
    shapely>=2.0a

[options.packages.find]
where = src
include = *
